Finish Ratings functionaility
- Add Upvote Posts, Comments
- Add Downvote Posts, Comments
- Add Remove Votes
- Add CRUD operations
